--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
           <div class="d-flex flex-row text-secondary small">
             <div class="p-2"><span class="fa fa-clock-o"></span><%- moment(articles[key].update_time * 1000).format('YYYY/MM/DD') %> </div>
             <div class="p-2"><i class="fa fa-tag" aria-hidden="true"></i> 
-              <a href="#" class="text-info">
+              <a href="/category/<%- articles[key].category %> " class="text-info">
                 <%- categories[articles[key].category].name %> 
               </a>
             </div>
