--- a/views/layout/layout.ejs
+++ b/views/layout/layout.ejs
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>六角部落格 | Bootstrap 4 繁體中文手冊</title>
+  <title>六角部落格</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
@@ -35,7 +35,9 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav ml-auto">
-          <a class="nav-item nav-link" href="#">心得 <span class="sr-only">(current)</span></a>
+        <% for(let key in categories) { %>
+          <a class="nav-item nav-link" href="/category/<%- categories[key].id %>"><%-categories[key].name%><span class="sr-only">(current)</span></a>
+        <% } %> 
       </div>
     </div>
   </nav>
