--- a/views/dashboard/archives.ejs
+++ b/views/dashboard/archives.ejs
@@ -4,7 +4,7 @@
     <div class="btn-group w-100">
       <a href="/dashboard/archives?status=public" class="btn btn-outline-secondary w-100 rounded-0 <% if(status === 'public') { %>active<% } %>">已發佈</a>
       <a href="/dashboard/archives?status=draft" class="btn btn-outline-secondary w-100 rounded-0 <% if(status === 'draft') { %>active<% } %>">草稿</a>
-      <a href="article.html" class="btn btn-primary">新增文章</a>
+      <a href="/dashboard/article/create" class="btn btn-primary">新增文章</a>
     </div>
     <div id="articles">
     <% for(let key in articles) { %> 
@@ -27,36 +27,13 @@
         </div>
         <div class="card-footer p-0 btn-group">
           <a href="#" class="btn btn-outline-danger rounded-0 deletePost" data-id="<%- articles[key].id %>" data-title="<%- articles[key].title %>">刪除</a>
-          <a href="#" class="btn btn-outline-secondary w-100 rounded-0">編輯</a>          
-          <a href="#" target="_blank" class="btn btn-outline-secondary w-100 rounded-0">預覽</a>
+          <a href="#" class="btn btn-outline-secondary w-100 rounded-0 editPost" data-id="<%- articles[key].id %>" data-title="<%- articles[key].title %>">編輯</a>          
+          <a href="#" target="_blank" class="btn btn-outline-secondary w-100 rounded-0 previewPost" data-id="<%- articles[key].id %>" data-title="<%- articles[key].title %>">預覽</a>
         </div>
       </div>
     <% } %> 
     </div>
   </div>
 </div>
-
-<nav class="my-5" aria-label="Page navigation example">
-  <ul class="pagination justify-content-center">
-    <li class="page-item disabled">
-      <a class="page-link" href="/dashboard/archives" tabindex="-1">Previous</a>
-    </li>
-    
-      <li class="page-item active"> 
-        <a class="page-link" href="/dashboard/archives">
-          1
-        </a>
-      </li>
-    
-      <li class="page-item "> 
-        <a class="page-link" href="/dashboard/archives">
-          2
-        </a>
-      </li>
-    
-    <li class="page-item ">
-      <a class="page-link" href="/dashboard/archives">Next</a>
-    </li>
-  </ul>
-</nav>
+<%- include('../partials/pagination') %>
 <script src="/javascripts/archives.js"></script>
