--- a/views/layout/layout.ejs
+++ b/views/layout/layout.ejs
@@ -36,7 +36,7 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav ml-auto">
         <% for(let key in categories) { %>
-          <a class="nav-item nav-link" href="/category/<%- categories[key].id %>"><%-categories[key].name%><span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="/category/<%- categories[key].path %>"><%-categories[key].name%><span class="sr-only">(current)</span></a>
         <% } %> 
       </div>
     </div>
