--- a/views/dashboard/categories.ejs
+++ b/views/dashboard/categories.ejs
@@ -22,8 +22,14 @@
         <!-- 資料呈現處理 -->
         <% for(let key in categories) { %> 
           <tr>
-            <td class="align-middle"><%- categories[key].name %> </td>
-            <td><input type="text" class="form-control form-control-sm" value="<%- categories[key].path %> "></td>
+            <form action="/dashboard/category.update?id=<%- key %>" method="POST">
+              <td class="align-middle"><input type="text" name="name" class="form-control form-control-sm" value="<%- categories[key].name %>"></td>
+              <td><input type="text" name="path" class="form-control form-control-sm"  value="<%- categories[key].path %>"></td>
+              <td class="align-middle">
+              <!-- 更新路由變數處理 -->
+              <button type="submit" class="btn btn-outline-primary btn-sm" onclick="return(confirm('確認更新該類別？'))">更新</button>
+            </form>
+            </td>
             <td class="align-middle">
               <!-- 刪除路由變數處理 -->
               <form action="/dashboard/category.delete?id=<%- key %>" method="POST">
